@@ -1,7 +1,10 @@
 2005-02-20  Francois Dumont  <dums@stlport...>
 
 	* Add many private definition of copy constructor and assignment operators
-	to avoid very anying warnings under some compilers (MSVC 7.0 7.1).
+	to avoid very anoying warnings under some compilers (MSVC 7.0 7.1).
+
+	* build/Makefiles/gmake/cygmin/sys.mak, test/unit/string_test.cpp:
+	Mingw fixes thanks Shura Zam.
 
 2005-02-19  Francois Dumont  <dums@stlport...>
 
